# pontuall

./: .gitattributes  .gitignore  README.md  components.json  package.json  skills-lock.json  tsconfig.json
.claude/: CLAUDE.md  PROJECT.md  settings.json
.lgpd/: ROPA.md  STATUS.md  data-map.md  discovery.md  eca-digital.md  encarregado.md  gaps.md  legal-basis.md  retention.md
public/: global.css
scripts/: build-test-variant.ps1  generate-signing-cert.ps1  sign.ps1
shared/: pontuall-permissions.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.test.json
src-tauri/capabilities/: main.json  splashscreen.json
src-tauri/migrations/postgres/: 0001_init.sql  0002_punch_security.sql  0003_drop_employee_permissions.sql  0004_employee_termination.sql  0006_employee_exclude_from_report.sql
src-tauri/migrations/sqlite/: 0001_init.sql  0002_punch_security.sql  0003_drop_employee_permissions.sql  0004_employee_termination.sql  0005_app_config.sql  0006_employee_exclude_from_report.sql
src-tauri/src/: app_flavor.rs  main.rs
src-tauri/src/auth/: client.rs  commands.rs  error.rs  guard.rs  mod.rs  permissions.rs  sidecar.rs  signature.rs
src-tauri/src/card/: apdu.rs  commands.rs  errors.rs  flows.rs  keys.rs  layout.rs  mod.rs  service.rs
src-tauri/src/db/: commands.rs  error.rs  mod.rs  models.rs  online.rs  retention.rs  setup_cmds.rs  sync.rs
src-tauri/src/db/repo/: cards.rs  config.rs  employees.rs  mod.rs  outbox.rs  punch_audit.rs  time_entries.rs
src-tauri/src/excel/: create.rs  error.rs  mod.rs
src-tauri/src/misc/: advanced.rs  get.rs  mod.rs  punch.rs  setup.rs  smtp.rs  work_hours.rs
(+83 files in other folders)
