[package]
name = "pontuall"
version = "0.3.1"
description = "PontuAll"
authors = ["TockaNest @ https://github.com/tockanest"]
edition = "2021"

[features]
# Parallel install for kiosk testing: separate keyring, data dir, sidecar binary/port.
test-flavor = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcsc = "2.8.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
	"sqlite",
	"chrono",
	"migrate",
] }
thiserror = "2"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }
dirs = "5.0.1"
rust_xlsxwriter = { version = "0.79.0", features = ["chrono"] }
chrono = "0.4.38"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
keyring = { version = "3.3.0", features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"json",
] }
url = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"

[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_Security_WinTrust",
	"Win32_Security_Cryptography",
	"Win32_Security_Cryptography_Catalog",
	"Win32_Security_Cryptography_Sip",
] }
